# CangjieLua

./: .gitignore  MIDI.md  README.md  cjpm.toml  design.md  luavm.md  task.md
.github/skills/basic_programming_concepts/: SKILL.md
docs/: contest-guide.md  guide.md  luavm_bytecode.md  task.md  validate_examples.sh  validate_task_examples.sh
docs/task_examples/: task_01_string_literal.cj  task_02_string_concat.cj  task_03_hex_literal.cj  task_04_underscore_number.cj  task_05_logical_and_or.cj  task_06_logical_not.cj  task_07_modulo.cj  task_08_power.cj  task_09_rune_literal.cj  task_09_scientific_notation.cj  task_10_multi_var_decl.cj  task_11_else_if.cj  task_11_multi_return.cj  task_12_else_if.cj  task_12_for_in.cj  task_13_bitwise_not.cj  task_13_for_in.cj  task_14_bitwise_not.cj  task_15_string_size.cj  task_16_multiline_comment.cj  task_17_array_literal.cj  task_17_bitwise_and_or.cj  task_18_array_literal.cj  task_19_array_assign.cj  task_20_let_immutable.cj  task_20_type_annotation.cj  task_21_let_immutable.cj  task_21_scope_shadowing.cj  task_22_scope_shadowing.cj  task_23_closure.cj  task_24_recursion.cj  task_24_tail_call.cj  task_25_tail_call.cj  task_26_default_param.cj  task_27_print_no_newline.cj  task_27_println_multi.cj  task_28_print_no_newline.cj  task_28_string_interpolation.cj  task_29_string_interpolation.cj  task_30_break.cj  (+15 more)
luavm/: exports.txt  luavm.md
luavm/src/: CMakeLists.txt  build_vm.bat  build_vm.sh  ldebug.c  ldo.c  libluavm.so.5  libluavm.so.5.5  lstate.c  luaconf.h  luavm.h
midi/: README.md  cjpm.toml
midi/src/: decoder.cj  decompile_score_test.cj  decompile_test.cj  encoder.cj  main.cj  midi_test.cj  parser.cj  readable_extra_test.cj  readable_test.cj  score_extra_test.cj  score_test.cj  verifier.cj  verifier_utils.cj
midi/src/core/: instrument.cj  parser.cj  parser_note.cj  types.cj  (+1 more)
scripts/: competition_docs.py
src/: cangjie_lua.cj  main.cj  tester.cj
src/codegen/: bytecode.cj  chunk_writer.cj  code_generator.cj
src/errors/: errors.cj
src/lexer/: lexer.cj  token.cj
src/luavm/: ffi.cj
src/parser/: ast.cj  parser.cj
src/runtime/: print_runtime.cj  runtime_value.cj
tests/: 01_return_constant.scj  02_simple_add.scj  03_simple_sub.scj  04_simple_mul.scj  05_simple_div.scj  06_precedence.scj  07_parentheses.scj  08_simple_variable.scj  09_two_variables.scj  100_int_float_mixed.scj  101_bool_literal.scj  102_bool_condition_probe.scj  103_return_int64.scj  104_return_bool.scj  105_return_float.scj  106_return_bool_false.scj  107_print_bool.scj  108_func_return_type_annotation.scj  109_missing_param_type_multi.scj  10_var_in_expr.scj  110_mixed_arithmetic_chain.scj  111_int_division_returns_float.scj  112_if_bool_false.scj  113_while_bool_false.scj  114_compare_int_ops.scj  115_compare_mixed_num.scj  116_if_non_bool_error.scj  117_while_non_bool_error.scj  118_if_compare_condition.scj  119_while_compare_condition.scj  11_complex_arithmetic.scj  120_compare_mixed_equality.scj  121_compare_bool_eq_neq.scj  122_compare_negative_mixed.scj  123_if_bool_func_result.scj  124_order_compare_non_number_error.scj  125_while_non_bool_func_result_error.scj  126_unary_minus_int.scj  127_unary_minus_float.scj  128_unary_minus_expr.scj  (+90 more)
(+117 files in other folders)
